crates/oomtop-tui/tests/snapshots/render__layout_llm_dev_160.snap
---
source: crates/oomtop-tui/tests/render.rs
expression: styled(&buf)
---
  E0[|||||||                      21.5%]  E3[|                             2.0%]  P6[||||||||||||||               42.4%]  P9[||||                         11.8%]
.aaabcccccccddddddddddddddddddddddaaaaab.aaabcdddddddddddddddddddddddddddddaaaab.aaabccccccccccccccdddddddddddddddaaaaab.aaabccccdddddddddddddddddddddddddaaaaab
  E1[|||||                        16.0%]  E4[                              1.3%]  P7[|||||||||||||||||||||||||||  78.0%]
.aaabcccccddddddddddddddddddddddddaaaaab.aaabddddddddddddddddddddddddddddddaaaab.aaabeeeeeeeeeeeeeeeeeeeeeeeeeeeddaaaaab
  E2[||                            6.7%]  E5[                              0.7%]  P8[|||||||||||||||||||||||||||||93.1%]
.aaabccddddddddddddddddddddddddddddaaaab.aaabddddddddddddddddddddddddddddddaaaab.aaabfffffffffffffffffffffffffffffaaaaab
 Mem[|||||||||||||||||###############################*****=========.20.1G/24.0G]  Tasks: 761, 3412 thr; 3 running
.aaab.................bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbdddddgggggggggaaaaaaaaaaaab..aaaaaaabbbaabbbbaaaaaabaaaaaaaa
 Swp[|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| 6.1G/7.0G]  Load average: 3.20 2.74 2.41
.aaabeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedaaaaaaaaab..aaaaaaaaaaaaaabbbb
 GPU[|||||||||||||||||||||||||||||||||||||||||||                          58.0%]  Uptime: 58 days, 11:23:04
.aaabcccccccccccccccccccccccccccccccccccccccccccddddddddddddddddddddddddddaaaaab..aaaaaaaabbbbbbbbbbbbbbbbb
 Tight on memory — 223 MiB headroom. sd-server · qwen-image-studio holds 9.9 GiB; 3 idle groups could free 3.0 GiB.  [r]
.hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhbbbbb
 MEM |apps 5.6G #gpu/metal 9.9G *compressed 1.6G =wired 3.0G .cache 3.8G free 100M avail 3.1G
aaaa..aaaaa.....baaaaaaaaaa.....daaaaaaaaaaa.....gaaaaaa.....aaaaaaa.....aaaaa.....aaaaaa
 SWAP 6.1G / 7.0G  ▲ 87% full  ⣀⣀⣤⣤⣤⣶⣶⣶⣿⣿  ▲ +360M/min  forecast stable   headroom 223M
aaaaaaiiiiiiiiiiieeeeeeeeeeee............eeeeeeeeeeeeeaaaaaaaaaaaaaaaaa
 GPU 58%  4.1 W  9.9G of budget 16.0G     package 11.8 W   P-cluster 3100/4400 MHz
aaaaa..........bbbbbbbbbbbbbbbbbbbbbb
 oomtop  [1 Home] 2 Processes 3 Models 4 Sandboxes 5 Reclaim 6 Timeline               mode pressure  ▲ Pressure  72% speed  ▲ warm  bat 29%  2 sources limited
bbbbbbbb.bbbbbbbb.bbbbbbbbbbb.bbbbbbbb.bbbbbbbbbbb.bbbbbbbbb.bbbbbbbbbb...............aaaaaaaaaaaaa..eeeeeeeeee..eeeeeeeee..eeeeee...........aaaaaaaaaaaaaaaaa
─ Your things ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
ddaaaaaaaaaaaadddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
 sd-server · qwen-image-studio  9.9G  generating 3/6 · 8.1 s/step    Claude Code ×4  1.4G

─ Ranked ───────────────────────────────────────────── sorted by memory · / filter · : command · i why ── Details ──────────────────────────────────────────────
ddaaaaaaadddddddddddddddddddddddddddddddddddddddddddddaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaddaaaaaaaadddddddddddddddddddddddddddddddddddddddddddddd
   NAME                                              MEM      GPU TREND        STATE                MEM% sd-server · qwen-image-studio → sd-server (9.7G) · pyt…
...aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 ▸ sd-server · qwen-image-studio (2)                9.9G      n/a ⣰⣤⣰⣄⣦⣼⣦⣰⣦⣷⣼  generating 3/6        41% model_server · 2 processes · grouped by builtin:model …
jjjkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkllllllllllllllllllllllllllllllllllllllllllllllllllllllllllaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
   KotlinCompileDaemon                              3.0G      n/a ⣦⣄⣦⣰⣤⣷⣄⣶⣼⣦⣷  idle 6h35m            12% footprint 9.9G (Σ footprint, exact) · resident 1.2G · …
bbbaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa................................aaaaaaaaaaaaaaaa
   Google Chrome (14)                               2.9G      n/a ⣤⣰⣄⣦⣼⣦⣰⣦⣷⣼⣶                        12% history ⣤⣰⣄⣦⣴⣦⣰⣤⣶⣼⣦⣴⣦⣷⣾ min 7.0G max 9.9G over 30 samp…
bbb...........................................................................aaaaaaaaaaaaaaaa
   GradleDaemon 9.8                                 2.9G      n/a ⣄⣦⣰⣤⣷⣄⣶⣼⣦⣷⣦  idle 3h40m            12% because: holds 41% of RAM
bbbaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa................................aaaaaaaaaaaaaaaa..........aaaaaaaaaaaaaaaaaaaaaaaaaa
   Claude desktop VM                               ≥1.5G      n/a ⣰⣄⣦⣼⣦⣰⣦⣷⣼⣶⣼                         6% [x] stop   [z] suspend   [p] pin   [m] mute   [w] watch
bbbiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii................................aaaaaaaaaaaaaaaa...........bbb........bbb...........bbb.......bbb........bbb
   ChatGPT / Codex (6)                              1.0G      n/a ⣦⣰⣄⣶⣄⣦⣼⣦⣷⣤⣷                         4%
bbb...........................................................................aaaaaaaaaaaaaaaa
   chrome-headless-shell                            450M      n/a ⣄⣦⣰⣦⣰⣤⣷⣼⣦⣼⣦  ▲ orphan               2%
bbb...........................................................................eeeeeeeeeeeeeeee
   Claude                                           420M      n/a ⣰⣄⣶⣄⣦⣴⣦⣷⣤⣷⣼                         2%
bbb...........................................................................aaaaaaaaaaaaaaaa
   WindowServer                                     410M      n/a ⣦⣰⣦⣰⣄⣶⣼⣦⣼⣦⣷                         2%
bbbaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa................................aaaaaaaaaaaaaaaa
   Claude Code · d4e5 (2)                           383M      n/a ⣄⣶⣄⣦⣰⣦⣷⣤⣷⣼⣦                         2%
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb................................aaaaaaaaaaaaaaaa
   Claude Code · a90b (2)                           372M      n/a ⣰⣤⣰⣄⣦⣼⣦⣰⣦⣷⣼                         2%
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb................................aaaaaaaaaaaaaaaa
   Claude Code · 7c11 (2)                           361M      n/a ⣦⣄⣦⣰⣤⣷⣄⣶⣼⣦⣷                         1%
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb................................aaaaaaaaaaaaaaaa
   Claude Code · 3f2a (2)                           350M      n/a ⣤⣰⣄⣦⣼⣦⣰⣦⣷⣼⣶                         1%
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb................................aaaaaaaaaaaaaaaa
   clang                                            120M      n/a ⣄⣦⣰⣤⣷⣄⣶⣼⣦⣷⣦                         0%
bbb...........................................................................aaaaaaaaaaaaaaaa
   oomtop (this)                                   22.0M      n/a ⣰⣄⣦⣼⣦⣰⣦⣷⣼⣶⣼                         0%
bbb...........................................................................aaaaaaaaaaaaaaaa


















F1Help   F2Setup  F3Search F4Filter F5Tree   F6SortBy F7Why    F8Reclaim F9Stop   F10Quit
..lllllll..lllllll..lllllll..lllllll..lllllll..lllllll..lllllll..llllllll..lllllll...lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll
--- legend
a = dim
b = bold
c = fg:Green
d = fg:DarkGray
e = fg:Yellow
f = fg:Red bold
g = dim italic
h = fg:Yellow bold
i = italic
j = bold reverse
k = bold italic reverse
l = reverse
