crates/oomtop-tui/tests/snapshots/render__palette_120.snap
---
source: crates/oomtop-tui/tests/render.rs
expression: styled(&buf)
---
  E0[|||||              21.5%]  E3[                    2.0%]  P6[||||||||||         42.4%]  P9[|||                11.8%]
.aaabcccccddddddddddddddaaaaab.aaabddddddddddddddddddddaaaab.aaabccccccccccdddddddddaaaaab.aaabcccddddddddddddddddaaaaab
  E1[||||               16.0%]  E4[                    1.3%]  P7[|||||||||||||||||||78.0%]
.aaabccccdddddddddddddddaaaaab.aaabddddddddddddddddddddaaaab.aaabeeeeeeeeeeeeeeeeeeeaaaaab
  E2[||                  6.7%]  E5[                    0.7%]  P8[|||||||||||||||||||93.1%]
.aaabccddddddddddddddddddaaaab.aaabddddddddddddddddddddaaaab.aaabfffffffffffffffffffaaaaab
 Mem[|||||||||||||######################***=====20.1G/24.0G]  Tasks: 761, 3412 thr; 3 running
.aaab.............bbbbbbbbbbbbbbbbbbbbbbdddgggggaaaaaaaaaaab..aaaaaaabbbaabbbbaaaaaabaaaaaaaa
 Swp[|||||||||||||||||||||||||||||||||||||||||||||6.1G/7.0G]  Load average: 3.20 2.74 2.41
.aaabeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeaaaaaaaaab..aaaaaaaaaaaaaabbbb
 GPU[|||||||||||||||||||||||||||||||                  58.0%]  Uptime: 58 days, 11:23:04
.aaabcccccccccccccccccccccccccccccccddddddddddddddddddaaaaab..aaaaaaaabbbbbbbbbbbbbbbbb
 Tight on memory — 223 MiB headroom. sd-server · qwen-image-studio holds 9.9 GiB; 3 idle groups could free 3.0 GiB.  [r]
.hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhbbbbb
 MEM |apps 5.6G #gpu 9.9G *cmp 1.6G =wired 3.0G .cache 3.8G free 100M avail 3.1G
aaaa..aaaaa.....baaaa.....daaaa.....gaaaaaa.....aaaaaaa.....aaaaa.....aaaaaa
 SWAP 6.1G / 7.0G  ▲ 87% full  ⣀⣤⣤⣶⣶⣿  ▲ +360M/min   headroom 223M
aaaaaaiiiiiiiiiiieeeeeeeeeeee........eeeeeeeeeeeee
 oomtop  [1 Home] 2 Processes 3 Models 4 Sandboxes 5 Reclaim 6 Timeline         ▲ Pressure  72% speed  ▲ warm  bat 29%
bbbbbbbb.bbbbbbbb.bbbbbbbbbbb.bbbbbbbb.bbbbbbbbbbb.bbbbbbbbb.bbbbbbbbbb.........eeeeeeeeee..eeeeeeeee..eeeeee
─ Your things ──────────────────────────────────────────────────────────────────────────────────────────────────────────
ddaaaaaaaaaaaadddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
 sd-server · qwen-image-studio  9.9G  generating 3/6 · 8.1 s/step    Claude Code ×4  1.4G

 ▲ Leftovers: chrome-headless-shell from Claude Code · 7c11 450M · r reclaims
eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee
─ Ranked ──────────────────────────────────────────────────────────────────────────────── / filter · : command · i why ─
ddaaaaaaaddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 ▸ sd-server · qwen-image-studio (2)                       model   generating 3/6     9.9G  ⣰⣦⣰⣄⣷⣼    85%
jjjkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkllllllllmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmlllllllllllllll
   KotlinCompil╭ Palette · search, filter, commands ────────────────────────────────────────────────────╮  ● reclaimable
bbbaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbccccccccccccccc
   GradleDaemon│> cl▏                                                                                   │  ● reclaimable
bbbaaaaaaaaaaaabbbbbb...................................................................................bccccccccccccccc
   Google Chrom│▸ Claude Code · 3f2a                                  agent · 350M                      │
bbb............bjjmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmllllllllllllllllllllllllllllllllllbaaaaaaaaaaaaaaa
   Claude deskt│  Claude Code · 7c11                                  agent · 361M                      │  sandbox
bbbiiiiiiiiiiiibbb....................................................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabiiiiiiiiiiiiiii
   ChatGPT / Co│  Claude Code · a90b                                  agent · 372M                      │
bbb............bbb....................................................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabaaaaaaaaaaaaaaa
   Claude Code │  Claude Code · d4e5                                  agent · 383M                      │
bbbbbbbbbbbbbbbbbb....................................................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabaaaaaaaaaaaaaaa
   chrome-headl│  clang                                               other · 120M                      │  ● reclaimable
bbb............bbb....................................................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccc
   Claude      │                                                                                        │
bbb............b........................................................................................baaaaaaaaaaaaaaa
   clang       ╰────────────────────────────────────────────────────────────────────────────────────────╯
bbb............bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaaaaaaa
   Claude Code · a90b (2)                                  agent                      372M  ⣰⣦⣰⣄⣷⣼     0%
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaaaaaaaaaaaaaaa........................aaaaaaaaaaaaaaa
   Claude Code · 3f2a (2)                                  agent                      350M  ⣦⣰⣄⣷⣼⣦     4%
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaaaaaaaaaaaaaaa........................aaaaaaaaaaaaaaa
   WindowServer                                            system                     410M  ⣦⣸⣦⣰⣦⣷     6%  protected
bbbaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa........................aaaaaaaaaaaaaaa
   Claude Code · 7c11 (2)                                  agent                      361M  ⣶⣄⣦⣸⣦⣷     0%
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaaaaaaaaaaaaaaa........................aaaaaaaaaaaaaaa
   oomtop (this)                                           other                     22.0M  ⣰⣄⣷⣼⣦⣼     1%  this
bbb.......................................................aaaaaaaaaaaaaaaaaaaaaaa........................aaaaaaaaaaaaaaa










 > cl▏   enter run · up/down choose · esc cancel
bbbbbbdddddddddddddddddddddddddddddddddddddddddd
F1Help   F2Setup  F3Search F4Filter F5Tree   F6SortBy F7Why    F8Reclaim F9Stop   F10Quit
..mmmmmmm..mmmmmmm..mmmmmmm..mmmmmmm..mmmmmmm..mmmmmmm..mmmmmmm..mmmmmmmm..mmmmmmm...mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
--- legend
a = dim
b = bold
c = fg:Green
d = fg:DarkGray
e = fg:Yellow
f = fg:Red bold
g = dim italic
h = fg:Yellow bold
i = italic
j = bold reverse
k = bold italic reverse
l = dim reverse
m = reverse
